# thread-sync-app

./: CMakeLists.txt  README.md
include/: main.h
src/: main.c
